# ROSUPDATED

ROS2_WS/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS2_WS/install/my_cpp_package/lib/my_cpp_package/: add_two_ints_client_no_oop  add_two_ints_client_oop  add_two_ints_server  cpp_node  hw_status_check_cpp  number_publisher  publisher  subscriber
ROS2_WS/install/my_cpp_package/share/my_cpp_package/: package.sh
ROS2_WS/install/my_interface_pkg/share/my_interface_pkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS2_WS/install/my_launch_pkg/share/my_launch_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  (+1 more)
ROS2_WS/log/: latest_build
ROS2_WS/src/my_cpp_package/: CMakeLists.txt  package.xml
ROS2_WS/src/my_cpp_package/src/: add_two_ints_client_no_oop.cpp  add_two_ints_client_oop.cpp  add_two_ints_server.cpp  hw_status_check_cpp.cpp  my_first_cpp_node.cpp  number_publisher.cpp  publisher.cpp  subscriber.cpp  template.cpp
ROS2_WS/src/my_interface_pkg/: CMakeLists.txt
ROS2_WS/src/my_launch_pkg/: CMakeLists.txt  package.xml
ROS2_WS/src/my_launch_pkg/launch/: number_app.launch.py
ROS2_WS/src/my_python_pkg/: setup.py
ROS2_WS/src/my_python_pkg/my_python_pkg/: Publisher.py  Subscriber.py  add_two_ints.py  hw_status_publisher.py  number_publisher.py  python_template.py  service_client.py  service_client_oop.py
ROS2_WS1/install/: local_setup.sh  setup.sh
ROS2_WS1/src/cpp_package/: CMakeLists.txt  package.xml
ROS2_WS1/src/python_package/: package.xml  setup.py
(+51 files in other folders)
